--- a/BlazorTool.Client/Components/ActivityDisplay.razor
+++ b/BlazorTool.Client/Components/ActivityDisplay.razor
@@ -4,12 +4,12 @@
 
 @if (ActivityItem != null)
 {
-    <div class="activity-row" onclick="@OnRowClick">
-        <span class="activity-category" title="@Localizer["ActivityDisplay_Category"]">@ActivityItem.ActCategory</span>
-        <span class=@(isExternalWindow ? "activity-description-external" : "activity-description") title="@Localizer["ActivityDisplay_Description"]">@((MarkupString)Markdig.Markdown.ToHtml(ActivityItem.Description ?? ""))</span>
-        <span class="activity-workload" title="@Localizer["ActivityDisplay_WorkLoad"]">@ActivityItem.WorkLoad.ToString("F2") @Localizer["ActivityDisplay_HoursAbbreviation"]</span>
-        <span class="activity-workers" title="@Localizer["ActivityDisplay_Workers"]">@ActivityItem.Workers</span>
-        <div class="activity-persons" title="@Localizer["ActivityDisplay_AssignedPersons"]">
+    <div class="activity-row" >
+        <span class="activity-category" onclick="@OnRowClick" title="@Localizer["ActivityDisplay_Category"]">@ActivityItem.ActCategory</span>
+        <span class=@(isExternalWindow ? "activity-description-external" : "activity-description") onclick="@OnRowClick" title="@Localizer["ActivityDisplay_Description"]">@((MarkupString)Markdig.Markdown.ToHtml(ActivityItem.Description ?? ""))</span>
+        <span class="activity-workload" onclick="@OnRowClick" title="@Localizer["ActivityDisplay_WorkLoad"]">@ActivityItem.WorkLoad.ToString("F2") @Localizer["ActivityDisplay_HoursAbbreviation"]</span>
+        <span class="activity-workers" onclick="@OnRowClick" title="@Localizer["ActivityDisplay_Workers"]">@ActivityItem.Workers</span>
+        <div class="activity-persons" onclick="@OnRowClick" title="@Localizer["ActivityDisplay_AssignedPersons"]">
             @if(isEditable)
             {
                 <button class="add-person-btn" @onclick="() => OnClick.InvokeAsync(ActivityItem.ActivityID)" title="@Localizer["ActivityDisplay_AddPerson"]">
@@ -18,8 +18,8 @@
             }
             -> @String.Join(", ", Persons?.Select(p => p.Name).ToList() ?? new List<string>())
         </div>
-        <span class="activity-date" title="@Localizer["ActivityDisplay_DateAdded"]">@ActivityItem.AddDate.ToString("dd.MM.yyyy HH:mm")</span>
-        <span class="activity-workload" title="@Localizer["Cost"]">@(ActivityItem?.Cost?.ToString("C2", new CultureInfo("pl-PL")))</span>
+        <span class="activity-date" onclick="@OnRowClick" title="@Localizer["ActivityDisplay_DateAdded"]">@ActivityItem.AddDate.ToString("dd.MM.yyyy HH:mm")</span>
+        <span class="activity-workload" onclick="@OnRowClick" title="@Localizer["Cost"]">@(ActivityItem?.Cost?.ToString("C2", new CultureInfo("pl-PL")))</span>
     </div>
 }
 <TelerikWindow @bind-Visible="isActivityDisplayOpened" Modal="true" CloseOnOverlayClick="true">
