--- a/BlazorTool.Client/Components/AddButton.razor
+++ b/BlazorTool.Client/Components/AddButton.razor
@@ -1,9 +1,19 @@
-﻿<button onclick="@onclick" class="add-new-button">
+﻿@namespace BlazorTool.Client.Components
+
+<button class="add-new-button" @onclick="OnClickCallback" type="button">
     <span class="icon add-icon"></span>
-    <span> @ChildContent </span>
+    @ChildContent
 </button>
 
 @code {
-    [Parameter] public EventCallback onclick { get; set; }
-    [Parameter] public RenderFragment? ChildContent { get; set; }
+    [Parameter]
+    public EventCallback<MouseEventArgs> onclick { get; set; }
+
+    [Parameter]
+    public RenderFragment? ChildContent { get; set; }
+
+    private Task OnClickCallback(MouseEventArgs args)
+    {
+        return onclick.InvokeAsync(args);
+    }
 }
