--- a/BlazorTool.Client/Components/RefreshButton.razor
+++ b/BlazorTool.Client/Components/RefreshButton.razor
@@ -1,9 +1,19 @@
-﻿<button onclick="@onclick" class="reload-data-button">
+﻿@namespace BlazorTool.Client.Components
+
+<button class="reload-data-button" @onclick="OnClickCallback" type="button">
     <span class="icon refresh-icon"></span>
-    <span> @ChildContent </span>
+    @ChildContent
 </button>
 
 @code {
-    [Parameter] public EventCallback onclick { get; set; }
-    [Parameter] public RenderFragment? ChildContent { get; set; }
+    [Parameter]
+    public EventCallback<MouseEventArgs> onclick { get; set; }
+
+    [Parameter]
+    public RenderFragment? ChildContent { get; set; }
+
+    private Task OnClickCallback(MouseEventArgs args)
+    {
+        return onclick.InvokeAsync(args);
+    }
 }
